--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="variable-home-url" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+    <meta property="og:title" content="Dzamashvili Design Studio" />
+    <meta property="og:description" content="გთავაზობთ ნებისმიერი ობიექტის ინტერიერის დიზაინის შექმნას და მის განსახორციელებლად სრულ საპროექტო მომსახურებას" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dzamashvilidesigns.com" />
+    <meta property="og:image" content="https://dzamashvilidesigns.com/i/og_image.png" />
+
+
     <link rel="icon" href="/i/favicon.ico" />
     <meta app-version="1.0-with-app.css-removed" />
 
@@ -132,7 +140,9 @@
                     <div class="fixed-wrap fixed">
                         <div class="slide-text">
                             <div class="wrap text-wrap wide align-center intro-text">
-                                <p class="widont balance-text">Lorem Ipsum.</p>
+                                <p class="floralwhite" id="promotional-message">
+                                    
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -225,8 +235,8 @@
     </script> -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js" id="jquery-js"></script>
     <script src="https://unpkg.com/mustache@latest"></script>
-    <script type="text/javascript" src="resources/script.js?v=4" id="v2_scripts-js"></script>
     <script type="text/javascript" src="projects/data.js?v=4"></script>
+    <script type="text/javascript" src="resources/script.js?v=4" id="v2_scripts-js"></script>
     <script type="text/javascript" src="projects/homepage-projects.js?v=4"></script>
 
 </body>
